feat(client): prox_activation with agent type

--- a/client/new-notebook.ipynb
+++ b/client/new-notebook.ipynb
@@ -2,13 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n#Used only for Dev\\n\\nimport simulator, agent, simulator_interface, behavior\\nfrom importlib import reload\\nreload(simulator)\\nreload(behavior)\\nreload(simulator_interface)\\nreload(agent)\\n'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "#Used only for Dev\n",
@@ -24,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -33,19 +44,21 @@
    "outputs": [],
    "source": [
     "from simulator_interface import open_session, close_session\n",
-    "simulator, epuck1, epuck2 = open_session(nb_agents=2)"
+    "simulator, epuck1, epuck2 = open_session(nb_agents=2, agent_types=['cat', 'mouse'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "'running'"
+      "text/plain": [
+       "'stop'"
+      ]
      },
-     "execution_count": 3,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -79,41 +92,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 57,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.9771089275127539, 0.9771089275127539]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'mouse'"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(epuck1.prox_activations())"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+    "epuck2.type"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "def obstacle_avoidance(robot):\n",
     "    left, right = robot.prox_activations()\n",
     "    # print('\\r', left, '\\t' ,right, '\\t', left_wheel, '\\t', right_wheel, \" \"*100, end=\"\")\n",
-    "    return right, left"
+    "    return right/1.2, left/1.2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def agressive(robot):\n",
+    "    left, right = robot.prox_activations(tracked_objects=[\"mouse\"])\n",
+    "    # print('\\r', left, '\\t' ,right, '\\t', left_wheel, '\\t', right_wheel, \" \"*100, end=\"\")\n",
+    "    return left, right, 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Behavior obstacle_avoidance started\n",
+      "Behavior agressive started\n"
+     ]
+    }
+   ],
+   "source": [
+    "epuck1.detach_all_behaviors()\n",
+    "epuck1.attach_behavior(obstacle_avoidance, freq=1)\n",
+    "epuck1.attach_behavior(agressive, freq=2)\n",
+    "epuck1.start_behavior(obstacle_avoidance)\n",
+    "epuck1.start_behavior(agressive)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -125,32 +170,38 @@
     }
    ],
    "source": [
-    "epuck1.detach_all_behaviors()\n",
-    "epuck1.attach_behavior(obstacle_avoidance, freq=1)\n",
-    "epuck1.start_behavior(obstacle_avoidance)"
+    "epuck2.detach_all_behaviors()\n",
+    "epuck2.attach_behavior(obstacle_avoidance, freq=1)\n",
+    "epuck2.start_behavior(obstacle_avoidance)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Behavior obstacle_avoidance stopped\n",
+      "Behavior agressive stopped\n",
       "Behavior obstacle_avoidance stopped\n"
      ]
     }
    ],
    "source": [
     "epuck1.stop_behavior(obstacle_avoidance)\n",
-    "epuck1.stop()"
+    "epuck1.stop_behavior(agressive)\n",
+    "epuck1.stop()\n",
+    "\n",
+    "epuck2.stop_behavior(obstacle_avoidance)\n",
+    "epuck2.stop()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 63,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
