feat(client): fear and agressive behavior, mixed behaviors

--- a/client/new-notebook.ipynb
+++ b/client/new-notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -15,7 +15,7 @@
        "'\\n#Used only for Dev\\n\\nimport simulator, agent, simulator_interface, behavior\\nfrom importlib import reload\\nreload(simulator)\\nreload(behavior)\\nreload(simulator_interface)\\nreload(agent)\\n'"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -44,12 +44,24 @@
    "outputs": [],
    "source": [
     "from simulator_interface import open_session, close_session\n",
-    "simulator, epuck1, epuck2 = open_session(nb_agents=2, agent_types=['cat', 'mouse'])"
+    "agents = [\n",
+    "    { \n",
+    "        \"agent_type\": \"predator\",\n",
+    "        \"initial_coordinates\": ((0.55,0.4),1.6),\n",
+    "        \"radius\": 15,\n",
+    "     },\n",
+    "    { \n",
+    "        \"agent_type\": \"prey\",\n",
+    "        \"initial_coordinates\": ((0.5,0.6),-1.6),\n",
+    "        \"radius\": 8,\n",
+    "     }\n",
+    "]\n",
+    "simulator, predator, prey = open_session(nb_agents=len(agents), agents=agents)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +70,7 @@
        "'stop'"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,74 +81,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "epuck1.wait(3)\n",
-    "\n",
-    "epuck1.left_spd = 3\n",
-    "epuck1.right_spd = 3\n",
-    "\n",
-    "epuck1.wait(3)\n",
-    "\n",
-    "epuck1.left_spd = 0\n",
-    "epuck1.right_spd = 0\n",
-    "\n",
-    "epuck1.wait(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'mouse'"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "epuck2.type"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def obstacle_avoidance(robot):\n",
     "    left, right = robot.prox_activations()\n",
-    "    # print('\\r', left, '\\t' ,right, '\\t', left_wheel, '\\t', right_wheel, \" \"*100, end=\"\")\n",
-    "    return right/1.2, left/1.2"
+    "    return right, left, 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def agressive(robot):\n",
-    "    left, right = robot.prox_activations(tracked_objects=[\"mouse\"])\n",
-    "    # print('\\r', left, '\\t' ,right, '\\t', left_wheel, '\\t', right_wheel, \" \"*100, end=\"\")\n",
-    "    return left, right, 0.5"
+    "def aggression(robot):\n",
+    "    tracked_objects=[\"prey\"]\n",
+    "    left, right, obj_left, obj_right = robot.prox_activations(tracked_objects, return_epucks=True)\n",
+    "    activation = 4\n",
+    "    if obj_left not in tracked_objects:\n",
+    "        left = 1\n",
+    "    if obj_right not in tracked_objects:\n",
+    "        right = 1\n",
+    "    if obj_left not in tracked_objects and obj_right not in tracked_objects:\n",
+    "        activation = 0\n",
+    "    return 1 - right, 1 - left, activation\n",
+    "\n",
+    "def fear(robot):\n",
+    "    tracked_objects=[\"predator\"]\n",
+    "    left, right, obj_left, obj_right = robot.prox_activations(tracked_objects, return_epucks=True)\n",
+    "    activation = 4\n",
+    "    if obj_left not in tracked_objects:\n",
+    "        left = 1\n",
+    "    if obj_right not in tracked_objects:\n",
+    "        right = 1\n",
+    "    if obj_left not in tracked_objects and obj_right not in tracked_objects:\n",
+    "        activation = 0\n",
+    "    return 1 - left, 1 - right, activation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -144,40 +131,47 @@
      "output_type": "stream",
      "text": [
       "Behavior obstacle_avoidance started\n",
-      "Behavior agressive started\n"
+      "Behavior aggression started\n"
      ]
     }
    ],
    "source": [
-    "epuck1.detach_all_behaviors()\n",
-    "epuck1.attach_behavior(obstacle_avoidance, freq=1)\n",
-    "epuck1.attach_behavior(agressive, freq=2)\n",
-    "epuck1.start_behavior(obstacle_avoidance)\n",
-    "epuck1.start_behavior(agressive)"
+    "predator.detach_all_behaviors()\n",
+    "\n",
+    "predator.attach_behavior(obstacle_avoidance, freq=1)\n",
+    "predator.attach_behavior(aggression, freq=1)\n",
+    "\n",
+    "predator.start_behavior(obstacle_avoidance)\n",
+    "predator.start_behavior(aggression)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Behavior obstacle_avoidance started\n"
+      "Behavior obstacle_avoidance started\n",
+      "Behavior fear started\n"
      ]
     }
    ],
    "source": [
-    "epuck2.detach_all_behaviors()\n",
-    "epuck2.attach_behavior(obstacle_avoidance, freq=1)\n",
-    "epuck2.start_behavior(obstacle_avoidance)"
+    "prey.detach_all_behaviors()\n",
+    "\n",
+    "prey.attach_behavior(obstacle_avoidance, freq=1)\n",
+    "prey.attach_behavior(fear, freq=1)\n",
+    "\n",
+    "prey.start_behavior(obstacle_avoidance)\n",
+    "prey.start_behavior(fear)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -185,23 +179,25 @@
      "output_type": "stream",
      "text": [
       "Behavior obstacle_avoidance stopped\n",
-      "Behavior agressive stopped\n",
-      "Behavior obstacle_avoidance stopped\n"
+      "Behavior aggression stopped\n",
+      "Behavior obstacle_avoidance stopped\n",
+      "Behavior fear stopped\n"
      ]
     }
    ],
    "source": [
-    "epuck1.stop_behavior(obstacle_avoidance)\n",
-    "epuck1.stop_behavior(agressive)\n",
-    "epuck1.stop()\n",
+    "predator.stop_behavior(obstacle_avoidance)\n",
+    "predator.stop_behavior(aggression)\n",
+    "predator.stop()\n",
     "\n",
-    "epuck2.stop_behavior(obstacle_avoidance)\n",
-    "epuck2.stop()"
+    "prey.stop_behavior(obstacle_avoidance)\n",
+    "prey.stop_behavior(fear)\n",
+    "prey.stop()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 22,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
