--- a/client/new-notebook.ipynb
+++ b/client/new-notebook.ipynb
@@ -2,24 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "<module 'agent' from '/Users/jalalizekki/ia/simple-playgrounds-epuck/client/agent.py'>"
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
+    "\"\"\"\n",
     "#Used only for Dev\n",
     "\n",
     "import simulator, agent, simulator_interface, behavior\n",
@@ -27,12 +19,22 @@
     "reload(simulator)\n",
     "reload(behavior)\n",
     "reload(simulator_interface)\n",
-    "reload(agent)\n"
+    "reload(agent)\n",
+    "\"\"\""
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Preparing the simulator"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -58,14 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "'running'"
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,63 +77,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Routine sphere_apparition started\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
    "source": [
-    "simulator.start_sphere_apparition(period=5.)"
+    "# Testing aggression, fear and obstacle avoidance behaviors"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Routine sphere_apparition stopped\n"
-     ]
-    }
-   ],
-   "source": [
-    "simulator.stop_sphere_apparition()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def obstacle_avoidance(robot):\n",
     "    left, right = robot.prox_activations()\n",
     "    return right, left, 1"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -235,23 +210,131 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "close_session(simulator)"
-   ]
+    "# Testing sphere apparition"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Routine sphere_apparition started\n"
+     ]
+    }
+   ],
+   "source": [
+    "simulator.start_sphere_apparition(period=5.)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "outputs": [],
-   "source": [],
+   "source": [
+    "def seek_spheres(robot):\n",
+    "    left, right = robot.prox_activations(tracked_objects=[\"Sphere\"])\n",
+    "    left_wheel = 1 - left\n",
+    "    right_wheel = 1 - right\n",
+    "    return left_wheel, right_wheel, 1"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Behavior seek_spheres started\n"
+     ]
+    }
+   ],
+   "source": [
+    "predator.detach_all_behaviors()\n",
+    "\n",
+    "predator.attach_behavior(seek_spheres, freq=1)\n",
+    "predator.start_behavior(seek_spheres)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Routine sphere_apparition stopped\n"
+     ]
+    }
+   ],
+   "source": [
+    "simulator.stop_sphere_apparition()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Behavior seek_spheres stopped\n"
+     ]
+    }
+   ],
+   "source": [
+    "predator.stop_behavior(seek_spheres)\n",
+    "predator.stop()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [],
+   "source": [
+    "close_session(simulator)"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
