--- a/client/new-notebook.ipynb
+++ b/client/new-notebook.ipynb
@@ -2,14 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "is_executing": true,
+     "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'agent' from 'd:\\\\Github\\\\projet_semestriel\\\\simple-playgrounds-epuck\\\\client\\\\agent.py'>"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "#Used only for Dev\n",
@@ -20,21 +31,22 @@
     "reload(behavior)\n",
     "reload(simulator_interface)\n",
     "reload(agent)\n",
+    "\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# Preparing the simulator"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "# Preparing the simulator"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -60,14 +72,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "'running'"
+      "text/plain": [
+       "'running'"
+      ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,66 +92,68 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# Testing aggression, fear and obstacle avoidance behaviors"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "# Testing aggression, fear and obstacle avoidance behaviors"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
-   "source": [
-    "def obstacle_avoidance(robot):\n",
-    "    left, right = robot.prox_activations()\n",
-    "    return right, left, 1"
-   ],
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "def obstacle_avoidance(robot):\n",
+    "    left, right = robot.prox_activations(excluded_objects=['prey', 'predator'])\n",
+    "    return 1 - right, 1 - left, 1"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def aggression(robot):\n",
     "    tracked_objects=[\"prey\"]\n",
     "    left, right, obj_left, obj_right = robot.prox_activations(tracked_objects, return_epucks=True)\n",
-    "    activation = 4\n",
+    "    activation = 1\n",
     "    if obj_left not in tracked_objects:\n",
-    "        left = 1\n",
+    "        left = 0\n",
     "    if obj_right not in tracked_objects:\n",
-    "        right = 1\n",
+    "        right = 0\n",
     "    if obj_left not in tracked_objects and obj_right not in tracked_objects:\n",
     "        activation = 0\n",
-    "    return 1 - right, 1 - left, activation\n",
+    "    if obj_left in tracked_objects and obj_right in tracked_objects:\n",
+    "        left = right = 0\n",
+    "    return 1 - left, 1 - right, activation\n",
     "\n",
     "def fear(robot):\n",
     "    tracked_objects=[\"predator\"]\n",
     "    left, right, obj_left, obj_right = robot.prox_activations(tracked_objects, return_epucks=True)\n",
-    "    activation = 4\n",
+    "    activation = 1\n",
     "    if obj_left not in tracked_objects:\n",
-    "        left = 1\n",
+    "        left = 0\n",
     "    if obj_right not in tracked_objects:\n",
-    "        right = 1\n",
+    "        right = 0\n",
     "    if obj_left not in tracked_objects and obj_right not in tracked_objects:\n",
     "        activation = 0\n",
-    "    return 1 - left, 1 - right, activation"
+    "    return 1 - right, 1 - left, activation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -152,8 +168,8 @@
    "source": [
     "predator.detach_all_behaviors()\n",
     "\n",
-    "predator.attach_behavior(obstacle_avoidance, freq=1)\n",
-    "predator.attach_behavior(aggression, freq=1)\n",
+    "predator.attach_behavior(obstacle_avoidance, freq=10)\n",
+    "predator.attach_behavior(aggression, freq=10)\n",
     "\n",
     "predator.start_behavior(obstacle_avoidance)\n",
     "predator.start_behavior(aggression)"
@@ -161,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -171,13 +187,43 @@
       "Behavior obstacle_avoidance started\n",
       "Behavior fear started\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-8:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\paull\\anaconda3\\envs\\semes\\lib\\threading.py\", line 932, in _bootstrap_inner\n",
+      "Exception in thread Thread-11:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\paull\\anaconda3\\envs\\semes\\lib\\threading.py\", line 932, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"d:\\Github\\projet_semestriel\\simple-playgrounds-epuck\\client\\behavior.py\", line 36, in run\n",
+      "    self.run()\n",
+      "  File \"d:\\Github\\projet_semestriel\\simple-playgrounds-epuck\\client\\behavior.py\", line 36, in run\n",
+      "    self.loop_core()\n",
+      "  File \"d:\\Github\\projet_semestriel\\simple-playgrounds-epuck\\client\\behavior.py\", line 75, in loop_core\n",
+      "    self.loop_core()\n",
+      "  File \"d:\\Github\\projet_semestriel\\simple-playgrounds-epuck\\client\\behavior.py\", line 75, in loop_core\n",
+      "    res = self.callback(self.robot)\n",
+      "  File \"C:\\Users\\paull\\AppData\\Local\\Temp/ipykernel_8236/431346895.py\", line 2, in obstacle_avoidance\n",
+      "    res = self.callback(self.robot)\n",
+      "  File \"C:\\Users\\paull\\AppData\\Local\\Temp/ipykernel_8236/288638774.py\", line 17, in fear\n",
+      "  File \"d:\\Github\\projet_semestriel\\simple-playgrounds-epuck\\client\\agent.py\", line 184, in prox_activations\n",
+      "  File \"d:\\Github\\projet_semestriel\\simple-playgrounds-epuck\\client\\agent.py\", line 184, in prox_activations\n",
+      "    raise Exception(\"Could not get activations\")\n",
+      "Exception: Could not get activations\n",
+      "    raise Exception(\"Could not get activations\")\n",
+      "Exception: Could not get activations\n"
+     ]
     }
    ],
    "source": [
     "prey.detach_all_behaviors()\n",
     "\n",
-    "prey.attach_behavior(obstacle_avoidance, freq=1)\n",
-    "prey.attach_behavior(fear, freq=1)\n",
+    "prey.attach_behavior(obstacle_avoidance, freq=10)\n",
+    "prey.attach_behavior(fear, freq=10)\n",
     "\n",
     "prey.start_behavior(obstacle_avoidance)\n",
     "prey.start_behavior(fear)"
@@ -185,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -211,16 +257,22 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# Testing sphere apparition"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "# Testing sphere apparition"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -232,17 +284,17 @@
    ],
    "source": [
     "simulator.start_sphere_apparition(period=5.)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   },
    "outputs": [],
    "source": [
     "def seek_spheres(robot):\n",
@@ -250,17 +302,17 @@
     "    left_wheel = 1 - left\n",
     "    right_wheel = 1 - right\n",
     "    return left_wheel, right_wheel, 1"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -275,17 +327,17 @@
     "\n",
     "predator.attach_behavior(seek_spheres, freq=1)\n",
     "predator.start_behavior(seek_spheres)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -297,50 +349,79 @@
    ],
    "source": [
     "simulator.stop_sphere_apparition()"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Behavior seek_spheres stopped\n"
+     "ename": "NameError",
+     "evalue": "name 'seek_spheres' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9796/28789847.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpredator\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstop_behavior\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mseek_spheres\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mpredator\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'seek_spheres' is not defined"
      ]
     }
    ],
    "source": [
     "predator.stop_behavior(seek_spheres)\n",
     "predator.stop()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [],
-   "source": [
-    "close_session(simulator)"
-   ],
+   "execution_count": 101,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-84:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\paull\\anaconda3\\envs\\semes\\lib\\threading.py\", line 932, in _bootstrap_inner\n",
+      "Exception in thread Thread-85:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\paull\\anaconda3\\envs\\semes\\lib\\threading.py\", line 932, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"d:\\Github\\projet_semestriel\\simple-playgrounds-epuck\\client\\behavior.py\", line 36, in run\n",
+      "    self.run()\n",
+      "  File \"d:\\Github\\projet_semestriel\\simple-playgrounds-epuck\\client\\behavior.py\", line 36, in run\n",
+      "    self.loop_core()\n",
+      "  File \"d:\\Github\\projet_semestriel\\simple-playgrounds-epuck\\client\\behavior.py\", line 75, in loop_core\n",
+      "    self.loop_core()\n",
+      "  File \"d:\\Github\\projet_semestriel\\simple-playgrounds-epuck\\client\\behavior.py\", line 75, in loop_core\n",
+      "    res = self.callback(self.robot)\n",
+      "  File \"C:\\Users\\paull\\AppData\\Local\\Temp/ipykernel_9796/431346895.py\", line 2, in obstacle_avoidance\n",
+      "    res = self.callback(self.robot)\n",
+      "  File \"C:\\Users\\paull\\AppData\\Local\\Temp/ipykernel_9796/636646994.py\", line 3, in aggression\n",
+      "  File \"d:\\Github\\projet_semestriel\\simple-playgrounds-epuck\\client\\agent.py\", line 184, in prox_activations\n",
+      "  File \"d:\\Github\\projet_semestriel\\simple-playgrounds-epuck\\client\\agent.py\", line 184, in prox_activations\n",
+      "    raise Exception(\"Could not get activations\")\n",
+      "Exception: Could not get activations\n",
+      "    raise Exception(\"Could not get activations\")\n",
+      "Exception: Could not get activations\n"
+     ]
+    }
+   ],
+   "source": [
+    "close_session(simulator)"
+   ]
   }
  ],
  "metadata": {
@@ -359,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
