feat(agent-color): texture, color option

--- a/client/new-notebook.ipynb
+++ b/client/new-notebook.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -52,6 +52,7 @@
     "        # \"initial_coordinates\": ((0.5,0.6),2*rd.random()*math.pi),\n",
     "        \"initial_coordinates\": ((0.5,0.6),1.6),\n",
     "        \"radius\": 20,\n",
+    "        \"texture\": (192, 106, 47)\n",
     "    },\n",
     "    # { \n",
     "    #     \"agent_type\": \"prey\",\n",
@@ -70,6 +71,7 @@
     "    #     \"initial_coordinates\": ((0.6,0.4), 2*rd.random()*math.pi),\n",
     "    #     \"radius\": 15,\n",
     "    # },\n",
+    "    \n",
     "    { \n",
     "        \"agent_type\": \"prey\",\n",
     "        \"initial_coordinates\": ((0.4,0.2), 2*rd.random()*math.pi),\n",
@@ -160,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -176,6 +178,60 @@
       "Behavior aggression started\n",
       "Behavior obstacle_avoidance started\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-37Exception in thread Exception in thread Thread-39:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\paull\\anaconda3\\envs\\semes\\lib\\threading.py\", line 932, in _bootstrap_inner\n",
+      "Thread-41:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\paull\\anaconda3\\envs\\semes\\lib\\threading.py\", line 932, in _bootstrap_inner\n",
+      ":\n",
+      "Exception in thread Thread-35:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\paull\\anaconda3\\envs\\semes\\lib\\threading.py\", line 932, in _bootstrap_inner\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\paull\\anaconda3\\envs\\semes\\lib\\threading.py\", line 932, in _bootstrap_inner\n",
+      "        self.run()\n",
+      "  File \"d:\\Github\\projet_semestriel\\simple-playgrounds-epuck\\client\\behavior.py\", line 36, in run\n",
+      "self.run()\n",
+      "  File \"d:\\Github\\projet_semestriel\\simple-playgrounds-epuck\\client\\behavior.py\", line 36, in run\n",
+      "    self.run()\n",
+      "  File \"d:\\Github\\projet_semestriel\\simple-playgrounds-epuck\\client\\behavior.py\", line 36, in run\n",
+      "    self.run()\n",
+      "  File \"d:\\Github\\projet_semestriel\\simple-playgrounds-epuck\\client\\behavior.py\", line 36, in run\n",
+      "    self.loop_core()\n",
+      "  File \"d:\\Github\\projet_semestriel\\simple-playgrounds-epuck\\client\\behavior.py\", line 75, in loop_core\n",
+      "    self.loop_core()\n",
+      "  File \"d:\\Github\\projet_semestriel\\simple-playgrounds-epuck\\client\\behavior.py\", line 75, in loop_core\n",
+      "    self.loop_core()\n",
+      "  File \"d:\\Github\\projet_semestriel\\simple-playgrounds-epuck\\client\\behavior.py\", line 75, in loop_core\n",
+      "    res = self.callback(self.robot)\n",
+      "  File \"C:\\Users\\paull\\AppData\\Local\\Temp/ipykernel_15788/212974377.py\", line 23, in fear\n",
+      "        res = self.callback(self.robot)\n",
+      "  File \"C:\\Users\\paull\\AppData\\Local\\Temp/ipykernel_15788/212974377.py\", line 23, in fear\n",
+      "res = self.callback(self.robot)\n",
+      "  File \"C:\\Users\\paull\\AppData\\Local\\Temp/ipykernel_15788/212974377.py\", line 23, in fear\n",
+      "    self.loop_core()\n",
+      "  File \"d:\\Github\\projet_semestriel\\simple-playgrounds-epuck\\client\\behavior.py\", line 75, in loop_core\n",
+      "    res = self.callback(self.robot)\n",
+      "  File \"C:\\Users\\paull\\AppData\\Local\\Temp/ipykernel_15788/212974377.py\", line 7, in aggression\n",
+      "  File \"d:\\Github\\projet_semestriel\\simple-playgrounds-epuck\\client\\agent.py\", line 182, in prox_activations\n",
+      "  File \"d:\\Github\\projet_semestriel\\simple-playgrounds-epuck\\client\\agent.py\", line 182, in prox_activations\n",
+      "  File \"d:\\Github\\projet_semestriel\\simple-playgrounds-epuck\\client\\agent.py\", line 182, in prox_activations\n",
+      "  File \"d:\\Github\\projet_semestriel\\simple-playgrounds-epuck\\client\\agent.py\", line 182, in prox_activations\n",
+      "    else:\n",
+      "Exception: Could not get activations\n",
+      "    else:\n",
+      "Exception: Could not get activations\n",
+      "    else:\n",
+      "Exception: Could not get activations\n",
+      "    else:\n",
+      "Exception: Could not get activations\n"
+     ]
     }
    ],
    "source": [
@@ -190,13 +246,12 @@
     "predator.attach_behavior(obstacle_avoidance, freq=5)\n",
     "predator.attach_behavior(aggression, freq=10)\n",
     "predator.start_behavior(aggression)\n",
-    "predator.start_behavior(obstacle_avoidance)\n",
-    "    "
+    "predator.start_behavior(obstacle_avoidance)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
